--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,131 @@
-*{
+* {
     margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.header-div{
-    display: flex;
-    justify-content: center;
-    gap: 1.25rem;
-    background-color: aquamarine;
-}
-h1{
-    color: salmon;
-    font-size: 40px;
-}
-img{
-    height: 2.1875rem;
-    width:2.1875rem;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-li{
+.header-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+    background-color: #BA4C23;
+}
+
+.main-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-image:linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url("../assets/img/biblioteca.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+
+}
+
+h1 {
+    color:#FFFFFF;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+img {
+    height: 2.1875rem;
+    width: 2.1875rem;
+}
+main{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cards-style{
+    width: 100%;
+    gap: 1.25rem;
+    display: flex;flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.tarjetas{
+    border: 1px solid #ccc;
+    margin: 10px;
     padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width: 15.625rem;
+    height: 15.625rem;
+    border-radius: 10px;
+}
+.tarjetas p{
+    font-family: 'Montserrat', sans-serif;
+    color: #FFFFFF;
+}
+    h1{
+        justify-self: center;
+    }
+
+    .card-title{
+        text-align: center;
+        font-size: medium;
+    }
+
+    .card-precio {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    button{
+        background-color: #FFFFFF ;
+        color: #BA4C23;
+        border-radius: 10px;
+        border-style: none;
+        width: 6.25rem;
+        
+    }
+
+.header-check{
+    display: flex;
+    justify-content: center;
+    color: #FFFFFF;
+    gap: 1.25rem;
+    background-color: #BA4C23;
+}
+
+.main-check{
+    background-image:linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url("../assets/img/biblioteca.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+.main-check h2{
+    font-family: 'Poppins', sans-serif;
+    color: #FFFFFF;
+}
+
+.product-table tr{
+    color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+    gap: 1.25rem;
+}
+thead{
+    background-color: #BA4C23;
+}
+
+tr{
+    background-color: #BA4C23;
 }
